# az-scout-plugin-regions-cheapest

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
src/az_scout_example/: __init__.py  routes.py  tools.py
src/az_scout_example/static/css/: example.css
src/az_scout_example/static/html/: example-tab.html
src/az_scout_example/static/js/: example-tab.js
src/az_scout_plugin_regions_cheapest/: __init__.py  mcp_tools.py  models.py  providers.py  routes.py  service.py
src/az_scout_plugin_regions_cheapest/static/css/: regions-cheapest.css
src/az_scout_plugin_regions_cheapest/static/data/: region_geography.json  region_locations.json  world.geojson
src/az_scout_plugin_regions_cheapest/static/html/: regions-cheapest.html
src/az_scout_plugin_regions_cheapest/static/js/: regions-cheapest.js
tests/: test_regions_cheapest.py
